--- a/placement/questions/static/style.css
+++ b/placement/questions/static/style.css
@@ -10,6 +10,10 @@
     font-family: 'Acme-Regular';
     src: url('fonts/Acme-Regular.ttf');
 }
+@font-face{
+    font-family: 'Ubuntu-Medium';
+    src: url('fonts/Ubuntu-Medium.ttf');
+}
 .loginBody{
     /* background-color: yellow ;
     /* background-image: url("background.jpeg") ; */
@@ -35,7 +39,7 @@
 .login_heading_block{
     /* border: 1px solid red; */
     width: 100%;
-    transform: translate(0%, -70%);
+    transform: translate(0%, -57%);
     display: flex;
     justify-content: center;
     /* height: 50px; */
@@ -44,9 +48,64 @@
 .login_heading_text{
     font-family: 'Acme-Regular';
     color: white;
-
+    font-size: 3rem; 
+}
+@media screen and (max-width: 750px){
+    .login_heading_text{
+        font-size: 6.5vw;
+        margin-top: 10px;
+    }
 }
 .login_logo{
-    transform: translate(100%, -10%);
-    width: 35%;
+    transform: translate(70%, 0%);
+    width: 45%;
+}
+.login_form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    transform: translate(0%,20%);
+}
+
+.login_username, .login_password{
+    width: 78%;
+    height: 30px;
+    outline: none;
+    border-radius: 5px;
+    padding:5px;
+    font-size: 18px;
+    font-family: 'Ubuntu-Medium';
+    transition: all 0.2s ease-in-out;
+    opacity: 0.95;
+
+}
+.login_username:focus, .login_password:focus{
+    opacity: 1;
+
+}
+.login_username::placeholder, .login_password::placeholder{
+    /* padding-left: 5px ; */
+    font-size: 18px;
+    /* transform: translate(0% , 10%) */
+}
+.login_submit_btn{
+    width: 120px;
+    height: 45px;
+    transform: translate(-5%, 30%);
+    border-radius: 5px;
+    background-color: rgb(248, 202, 22);
+    font-family: 'Ubuntu-Medium';
+    /* text-align: center; */
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+}
+.login_submit_btn:hover{
+    background-color: rgb(223, 181, 11);
+    /* border: 5px solid rgb(124, 101, 6); */
+}
+.login_submit_btn:focus{
+    font-size: 22px;
+    color: crimson;
 }
