--- a/placement/questions/templates/questions/layout.html
+++ b/placement/questions/templates/questions/layout.html
@@ -7,8 +7,8 @@
     <title>Questionnaire</title>
     <link href="{% static 'style.css' %}" rel="stylesheet">
 </head>
-
-{% block body %}
-{% endblock %}
-
+<body class="mainbody">
+    {% block content %}
+    {% endblock %}
+</body>
 </html>
