--- a/placement/questions/templates/questions/register.html
+++ b/placement/questions/templates/questions/register.html
@@ -1,28 +1,38 @@
-{% extends "questions/layout.html" %}
 {% load static %}
-
-{% block body %}<body class="registerBody">
-    <div class="registerBody2"></div>
-    <div class="registerBlock">
-        <span style="color: white; font-size: 50">{{message}}</span>
-        <img class="register_logo" src="{% static 'logo_nobg.png' %}" alt="logo"   >
-        <div class="register_heading_block" ><span class="register_heading_text">Questionnaire</span></div>
-        <form class="register_form" action="{% url 'register' %}" method="POST">
-            {% csrf_token %}
-            {{form.username}}
-            {{form.email}}
-            {{form.password}}
-            {{form.confirm_password}}
-            <input type="submit" class="register_submit_btn" value="Register">
-        </form>
-        <div class="register_login_block" style="transform: translate(0%, -50%) ">
-            <span class="register_login_text">
-                Already have an Account
-                <a class="register_login_link" href="{% url 'login' %}"> 
-                    Login here
-                </a>
-            </span>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Quesionnaire-register</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'style.css' %}">
+    </head>
+    
+    <body class="registerBody">
+        <div class="registerBody2"></div>
+        <div class="registerBody3"></div>
+        <div class="registerBody4"></div>
+        <div class="registerBlock">
+            <span style="color: white; font-size: 50">{{message}}</span>
+            <img class="register_logo" src="{% static 'logo_nobg.png' %}" alt="logo"   >
+            <div class="register_heading_block" ><span class="register_heading_text">Questionnaire</span></div>
+            <form class="register_form" action="{% url 'register' %}" method="POST">
+                {% csrf_token %}
+                {{form.username}}
+                {{form.email}}
+                {{form.password}}
+                {{form.confirm_password}}
+                <input type="submit" class="register_submit_btn" value="Register">
+            </form>
+            <div class="register_login_block" style="transform: translate(0%, -50%) ">
+                <span class="register_login_text">
+                    Already have an Account
+                    <a class="register_login_link" href="{% url 'login' %}"> 
+                        Login here
+                    </a>
+                </span>
+            </div>
         </div>
-    </div>
-
-</body>{% endblock %}
+    </body>
+</html>
